fix to center map for selected store on mobile (#4160)
Closes: #4141

--- a/projects/storefrontstyles/scss/components/store-finder/_store-finder-search.scss
+++ b/projects/storefrontstyles/scss/components/store-finder/_store-finder-search.scss
@@ -1,6 +1,6 @@
 %cx-store-finder-search {
   display: block;
-  margin: 0 0 3rem;
+  margin: 0 0 1rem;
 
   .cx-search-links {
     button {
